# research-workflow

./: .gitignore  CLAUDE.md  README.md  SKILL.md  config.example.yaml  pyproject.toml  requirements.txt
.claude/agents/: researcher.md  verifier.md
agents/verifier/: CLAUDE.md
hooks/: post-commit  pre-commit
sample-thesis/: README.md  main.tex  references.bib
sample-thesis/chapters/: conclusion.tex  introduction.tex  methodology.tex  related-work.tex  results.tex
scripts/: install-watcher.sh  setup.sh  uninstall-watcher.sh  verify-claim.sh
src/: __init__.py  citation_checker.py  converter.py  download.py  google_search.py  mcp_server.py  search.py  summarizer.py  watcher.py  web_search.py
